# slamdunk_obstacle_avoidance_example

./: .clang-format  .gitignore  CMakeLists.txt  README.md  atom.mk  nodelet_plugins.xml  package.xml
include/episkopi/: Avoid.hpp  AvoidSettings.hpp
ros/launch/: bebop_avoidance.launch  bebop_avoidance_config.launch
ros/src/: obstacle_avoidance_node.cpp  obstacle_avoidance_nodelet.cpp  obstacle_avoidance_nodelet.hpp
src/: Avoid.cpp
